# OpenOneRec

benchmarks/: README.md  pyproject.toml  requirements.txt
benchmarks/benchmark/: base_generator.py
benchmarks/scripts/: init_ray.sh  init_ray_cluster.sh
benchmarks/scripts/ray-vllm/: evaluate.py
benchmarks/scripts/ray-vllm/utils/: arguments.py
data/: README.md
pretrain/: README.md
verl_rl/: README.md
