[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onerec-benchamrk"
version = "0.1.0"
description = "OneRec Benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}

# Core dependencies - aligned for Torch 2.8 / CUDA 12.8 environments
dependencies = [
    "transformers==4.56.0",
    "ray==2.48.0",
    "vllm==0.11.0",
    "datasets==3.6.0",
    "safetensors==0.5.3",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pyarrow==18.1.0",
    "peft==0.15.2",
    "accelerate==1.8.1",
    "tokenizers==0.22.0",
    "bert-score==0.3.13",
    "scikit-learn==1.7.2",
    "rich==13.9.4",
    "tqdm==4.67.1",
    "pyfiglet==1.0.4",
    "pylatexenc==2.10",
    "vertexai==1.71.1",
    "openai==1.67.0",
    "anthropic==0.75.0"
]

[tool.setuptools]
packages = ["benchmark", "api", "scripts"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]
